@@ -2,13 +2,13 @@ Package: Rmpfr
 Type: Package
 Title: R MPFR - Multiple Precision Floating-Point Reliable
 Version: 0.3-0
-Date: 2011-03-09
+Date: 2011-04-30
 Author: Martin Maechler
 Maintainer: Martin Maechler <maechler@stat.math.ethz.ch>
 Depends: methods, R (>= 2.9.1)
 SystemRequirements: MPFR (MP Floating-Point Reliable Library, http://mpfr.org/)
   and GMP (GNU Multiple Precision library, http://gmplib.org/), see README
-Description: The package aims at providing S4 classes and methods for
+Description: Rmpfr provides S4 classes and methods for
   arithmetic including transcendental ("special") functions for
   arbitrary precision floating point numbers. To this end, it interfaces to
   the LGPL'ed MPFR (Multiple Precision Floating-Point Reliable) Library
